--- a/src/tienda/templates/ventas.html
+++ b/src/tienda/templates/ventas.html
@@ -8,7 +8,18 @@
                      font-weight: bold;
                      color: #2A3F54;
                           text-align: center;">
-                         Total Venta por Día: {{ total| intdot }} ₲
+                        Total Venta del día: {{ total| intdot }} ₲
+                </div>
+        <div style="font-size: 15px;
+                     font-weight: bold;
+                     color: #2A3F54;
+                          text-align: left;">
+                        <br>
+                        Total Efectivo: {{ totale.total | intdot }} ₲
+                <br>
+                        Total Tarjeta: {{ totalt.total | intdot }} ₲
+                <br>
+                        Total Cheque: {{ totalch.total | intdot }} ₲
 
             </div>
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
